# Labs

./: .gitignore  CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/algorithms/sort/: generating.c  generating.h  sort.c  sort.h  timeOfSort.c  timeOfSort.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h  test_matrix.c  test_matrix.h
libs/data_structures/string/: CMakeLists.txt  string_.c  string_.h  test_string_.c  test_string_.h
libs/data_structures/string/tasks/: allLettersInString.c  allLettersInString.h  digitToEndRevers.c  digitToEndRevers.h  digitToStart.c  digitToStart.h  printWordsRevers.c  printWordsRevers.h  removeAdjacentEqualLetters.c  removeAdjacentEqualLetters.h  removeExtraSpaces.c  removeExtraSpaces.h  removeNonLetters.c  removeNonLetters.h  replace.c  replace.h  replaceNumberWithSpaces.c  replaceNumberWithSpaces.h  reversString.c  reversString.h  test_tasks_string.c  test_tasks_string.h  wordsOrdered.c  wordsOrdered.h
libs/data_structures/string_/: CMakeLists.txt  string_.c  string_.h
libs/data_structures/vector/: test_vector.c  test_vector.h  vector.c  vector.h  vectorVoid.c  vectorVoid.h
