add_library(string
        string_.c
        tasks/removeNonLetters.c
        tasks/test_tasks_string.c
        tasks/removeAdjacentEqualLetters.c
        tasks/removeExtraSpaces.c
        tasks/digitToStart.c
        tasks/digitToEndRevers.c
        tasks/replaceNumbersWithSpaces.c
        tasks/allLettersInString.c
        tasks/replace.c
        )